--- a/static/styles.css
+++ b/static/styles.css
@@ -10,15 +10,26 @@ canvas {
     max-width: calc(var(--bs-gutter-x) * .5 * 2 + 480px);
     align-content: flex-start;
 }
+
+.form-select {
+    flex: 3;
+}
+
+.form-label {
+    margin-bottom: 0 !important;
+}
+
 .slider-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .slider-container label {
     flex: 1;
     text-align: left;
 }
+
 .slider-container input {
     flex: 3;
 }
