feat: add bluetooth send

--- a/static/styles.css
+++ b/static/styles.css
@@ -11,6 +11,10 @@ canvas {
     align-content: flex-start;
 }
 
+.accordion-button .badge {
+    font-size: 0.6em;
+}
+
 .form-select {
     flex: 3;
 }
